--- a/Assignments/Linear_Equations/Makefile
+++ b/Assignments/Linear_Equations/Makefile
@@ -12,5 +12,13 @@ main.exe: main.cs matrix.dll
 matrix.dll : vector.cs matrix.cs QRGS.cs
 	$(CSC) -target:library -out:$@ $^
 
+out.times.data : main.exe
+	>$@
+	for N in $$(seq 100 20 200); do \
+		time --format "$$N %e" --output $@ --append \
+		mono $< -size:$$N 1>out 2>err ;\
+	done
+
+
 clean:
 	$(RM) *.dll *.exe [Oo]ut*
