Input Output done

--- a/Tø/E4/I_O/Task1/Makefile
+++ b/Tø/E4/I_O/Task1/Makefile
@@ -1,8 +1,11 @@
+All : Out.txt
+	cat $<
+
 Out.txt : main.exe
 	mono main.exe > Out.txt
 
 main.exe: main.cs
-	mcs $< -target:exe -out:$@
+	mcs $< -target:exe -Out:$@
 
 clean:
 	rm --force Out.txt main.exe
