--- a/Tø/E6-multiprocesing/Makefile
+++ b/Tø/E6-multiprocesing/Makefile
@@ -1,24 +1,27 @@
-N = 1e9
-all : Out_main.txt Out_parallel.txt
+N = 5e8
 TIME = time --portability --append --output $@
+
+All: Out_para.txt Out_main.txt
+	cat $<
+	cat $<
+
+Out_para.txt: parallel.exe
+	$(TIME) mono parallel.exe -to_sum:$N -threads:1 >> $@
+
 
 Out_main.txt : main.exe
 	>$@
-	$(TIME) mono main.exe -terms:$N -threads:1 >> $@
-	$(TIME) mono main.exe -terms:$N -threads:2 >> $@
-	$(TIME) mono main.exe -terms:$N -threads:3 >> $@
-	$(TIME) mono main.exe -terms:$N -threads:4 >> $@
+	$(TIME) mono main.exe -to_sum:$N -threads:1 >> $@
+	$(TIME) mono main.exe -to_sum:$N -threads:2 >> $@
+	$(TIME) mono main.exe -to_sum:$N -threads:3 >> $@
+	$(TIME) mono main.exe -to_sum:$N -threads:4 >> $@
 
-main.exe : main.cs
+parallel.exe: parallel.cs
 	mcs $<
 
-Out_parallel.txt : parallel.cs
-	>$@
-	$(TIME) mono parallel.exe -sum:$N -threads:1 >> $@
 
-parallel.exe : parallel.cs
-	mcs $$<
+main.exe : main.cs
+	mcs $< -target:exe -out:$@
 
-
-clean: 
-	rm -rf *[Oo]ut *.exe *.txt
+clean:
+	rm -rf *.txt *.exe
